k8s/cluster-apps/kopia/deployment.yaml
# Source: kopia/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kopia
  namespace: kopia
  labels:
    app.kubernetes.io/name: "kopia"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: kopia
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "kopia"
    spec:
      restartPolicy: Always
      containers:
        - name: kopia
          image: kopia/kopia:latest@sha256:89fd95ee2942880ca00eae964266958a394421ddbdf69bca62e38afc55f5900e
          imagePullPolicy: IfNotPresent
          args:
            - "server"
            - "start"
            - "--address=http://0.0.0.0:10238"
            - "--insecure"
            - "--without-password"
            - "--allow-extremely-dangerous-unauthenticated-server-on-the-network"
          ports:
            - name: main
              containerPort: 10238
              protocol: TCP
          volumeMounts:
            - name: cache
              mountPath: /app/cache
              readOnly: false
            - name: devshm
              mountPath: /dev/shm
              readOnly: false
            - name: secret-volume
              mountPath: "/app/config/repository.config"
              subPath: repository.config
            - name: logs
              mountPath: /app/logs
              readOnly: false
            - name: downloads
              mountPath: /downloads
              readOnly: false
            - name: backup-source
              mountPath: /config
              readOnly: false
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 4000m
              memory: 2Gi
        - name: cli-logs-tailer
          image: busybox:latest
          command: ["/bin/sh"]
          args:
            - "-c"
            - "while true; do if [ -f /app/logs/cli-logs/latest.log ]; then tail -f /app/logs/cli-logs/latest.log; else sleep 5; fi; done"
          volumeMounts:
            - name: logs
              mountPath: /app/logs
              readOnly: true
        - name: content-logs-tailer
          image: busybox:latest
          command: ["/bin/sh"]
          args:
            - "-c"
            - "while true; do if [ -f /app/logs/content-logs/latest.log ]; then tail -f /app/logs/content-logs/latest.log; else sleep 5; fi; done"
          volumeMounts:
            - name: logs
              mountPath: /app/logs
              readOnly: true
      volumes:
        - name: logs
          emptyDir:
            sizeLimit: 1Gi
        - name: downloads
          hostPath:
            path: /downloads
            type: DirectoryOrCreate
        - name: cache
          emptyDir:
            sizeLimit: 5Gi
        - name: devshm
          emptyDir:
            medium: Memory
            sizeLimit: 2Gi
        - name: secret-volume
          secret:
            secretName: kopia-credentials
        - name: backup-source
          hostPath:
            path: /config
            type: DirectoryOrCreate
