k8s/cluster-apps/kopia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kopia
  namespace: kopia
  labels:
    app.kubernetes.io/name: "kopia"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 10238
      protocol: TCP
      targetPort: 10238
  selector:
    app.kubernetes.io/name: kopia
