k8s/cluster-apps/kopia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kopia-ingress
  namespace: kopia
  labels:
    app.kubernetes.io/name: "kopia"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kopia.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: kopia.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kopia
                port:
                  name: http
